# ed25519-benches

./: .gitignore  .gitmodules  Cargo.toml  build.rs  setup_firedancer.sh
benches/: ed25519_comparison.rs
src/: fd_stubs.c  firedancer_ffi.rs  lib.rs
