[package]
name = "ed25519-benches"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ed25519-dalek = "2.1"
ed25519-zebra = "4.0"
curve25519-dalek = "4.1"
rand = "0.8"
criterion = "0.5"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"

[[bench]]
name = "ed25519_comparison"
harness = false

[lib]
name = "ed25519_benches"
path = "src/lib.rs"
